sas-bases/components/security/network/networking.k8s.io/ingress/nginx.ingress.kubernetes.io/front-door-tls/sas-cas-control-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-cas-access-management-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-cas-access-management
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-cas-formats-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-cas-formats
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-cas-management-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-cas-management
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-cas-proxy-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-cas-proxy
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-cas-row-sets-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-cas-row-sets
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
